# avs2

./: .gitignore  CHANGES.txt  CMakeLists.txt  CMakePresets.json  RD_vc8.sln  RD_vc9.opensdf  RD_vc9.sln  lcommon_vc8.vcproj  lcommon_vc9.vcproj  ldecod_vc8.sln  ldecod_vc8.vcproj  ldecod_vc9.sln  ldecod_vc9.vcproj  lencod_vc8.sln  lencod_vc8.vcproj  lencod_vc9.sln  lencod_vc9.vcproj
lcommon/: CMakeLists.txt
lcommon/inc/: ComAdaptiveLoopFilter.h  block_info.h  commonStructures.h  commonVariables.h  contributors.h  defines.h  inter-prediction.h  intra-prediction.h  loop-filter.h  md5.h  memalloc.h  transform.h
lcommon/src/: ComAdaptiveLoopFilter.c  block_info.c  inter-prediction.c  intra-prediction.c  loop-filter.c  md5.c  memalloc.c  transform.c
ldecod/: CMakeLists.txt
ldecod/inc/: AEC.h  DecAdaptiveLoopFilter.h  annexb.h  biaridecod.h  block.h  codingUnit.h  global.h  header.h  pos_info.h  vlc.h  wquant.h
ldecod/src/: AEC.c  DecAdaptiveLoopFilter.c  b_frame.c  biaridecod.c  bitstream.c  block.c  codingUnit.c  context_ini.c  header.c  image.c  ldecod.c  loopfilter.c  output.c  pos_info.c  vlc.c  wquant.c
lencod/: CMakeLists.txt
lencod/inc/: AEC.h  EncAdaptiveLoopFilter.h  adaptiveQP.h  biariencode.h  bitstream.h  block.h  codingUnit.h  configfile.h  fast_me.h  global.h  header.h  image.h  mv-search.h  pos_info.h  ratecontrol.h  rdopt_coding_state.h  rdoq.h  refbuf.h  tdrdo.h  vlc.h  wquant.h
lencod/src/: AEC.c  EncAdaptiveLoopFilter.c  adaptiveQP.c  background.c  biariencode.c  bitstream.c  block.c  codingUnit.c  configfile.c  context_ini.c  fast_me.c  golomb.c  header.c  image.c  lencod.c  loopfilter.c  mv-search.c  pos_info.c  ratecontrol.c  rdopt.c  rdopt_coding_state.c  rdoq.c  refbuf.c  slice.c  tdrdo.c  vlc.c  wquant.c
lhardware/: CMakeLists.txt  hw.h  hw_dequant_stat.c  hw_dequant_stat.h  hw_global.c  hw_global.h
